--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "doctrine/orm": "*",
+        "propel/propel": "~2.0@dev",
         "pecee/simple-router": "4.3.7.2",
         "vlucas/phpdotenv": "^5.4"
     }
