EmailDispatcher has been added

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ DB_HOST="127.0.0.1"
 DB_USERNAME="root"
 DB_PASSWORD="password"
 DB_DBNAME="timino_database"
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_AUTH_USER=
+EMAIL_AUTH_PASS=
+EMAIL_SENDER=
