--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "pecee/simple-router": "4.3.7.2",
         "vlucas/phpdotenv": "^5.4",
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "firebase/php-jwt": "^6.0"
     }
 }
