--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 DB_CONNECTION="mysql:host="
 DB_HOST="127.0.0.1"
-DB_USERNAME="root"
-DB_PASSWORD="password"
+DB_USERNAME="aminr"
+DB_PASSWORD=""
 DB_DBNAME="timino_database"
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_AUTH_USER=
-EMAIL_AUTH_PASS=
-EMAIL_SENDER=
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=timinoinfo@gmail.com
+EMAIL_PASSWORD=timino1234
+EMAIL_SENDER=timinoinfo@gmail.com
