--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "pecee/simple-router": "4.3.7.2",
         "vlucas/phpdotenv": "^5.4",
         "phpmailer/phpmailer": "^6.6",
-        "firebase/php-jwt": "^6.0"
+        "firebase/php-jwt": "^6.0",
+        "rakit/validation": "^1.4"
     }
 }
