RefreshToken method has been added to AuthController

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ EMAIL_PORT=587
 EMAIL_USERNAME=timinoinfo@gmail.com
 EMAIL_PASSWORD=timino1234
 EMAIL_SENDER=timinoinfo@gmail.com
+
+JWT_SECRET_KEY=teHqsz65ExzFx6G
