--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_CONNECTION="mysql:host="
 DB_HOST="127.0.0.1"
-DB_USERNAME="aminr"
+DB_USERNAME="root"
 DB_PASSWORD=""
 DB_DBNAME="timino_database"
 
