--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,11 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
+    <IfModule mod_headers.c>
+        Header set Access-Control-Allow-Origin "*"
+        Header set Access-Control-Allow-Credentials "true"
+        Header set Access-Control-Max-Age "30"
+    </IfModule>
 
     RewriteEngine On
 
