README.md has been updated

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ DB_DBNAME="timino_database"
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USERNAME=timinoinfo@gmail.com
-EMAIL_PASSWORD=timino1234
-EMAIL_SENDER=timinoinfo@gmail.com
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_SENDER=
 
 JWT_SECRET_KEY=teHqsz65ExzFx6G
