Dockerfile and docker-compose.yml have been added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DB_CONNECTION="mysql:host="
-DB_HOST="127.0.0.1"
+DB_HOST="db"
 DB_USERNAME="root"
-DB_PASSWORD=""
-DB_DBNAME="timino_database"
+DB_PASSWORD="password"
+DB_DBNAME="timino_backend"
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
